fix logo on safari

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -48,7 +48,9 @@
 }
 
 .logo__link {
-
+    svg{
+        width: auto !important;
+    }
 }
 
 .footer__link-list {
